--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Verbs</title>
+    <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <header>
-        <div class="header">
-        <h1>VERBS</h1>  
-        </div>
-    </header>
+     <nav class="navbar navbar-dark bg-dark text-white">
+      <div class="col-9">
+        <h3>Verbs Game</h3>
+      </div>
+      <div class="col-3">
+        <h3> </h3>
+      </div>
+    </nav>
 
         <div class="text-center" id="next"></div>
         <h1 id="ShowVerb"> Play to Start </h1>
