--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Verbs</title>
-    <!-- CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <!-- CSS -->   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
   <body>
-     <nav class="navbar navbar-dark bg-dark text-white">
+    <nav class="navbar navbar-dark bg-dark text-white">
       <div class="col-9">
         <h3>Verbs Game</h3>
-      </div>
-      <div class="col-3">
-        <h3> </h3>
       </div>
     </nav>
 
@@ -23,21 +22,20 @@
         <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
       </svg>
     </div>
-        <h1 id="ShowVerb" class="text-center"> Play to Start </h1>
-        <div class="container text-center">
-            <div id="verbs-container">
-                <div id="Show-Image"></div>
-                <audio id="Show-Audio"></audio>
-                <p id="first-verb" class="verbs-answer"></p>
-                <p id="second-verb" class="verbs-answer"></p>
-                <p id="third-verb" class="verbs-answer"></p>
-                <p id="fourt-verb" class="verbs-answer"></p>
-            </div>
-            <small class="counter">
-                <span id="all-right-answer"></span>
-            </small>
-        </div>
-
+    <h1 id="showVerb" class="text-center">Play to Start</h1>
+    <div class="container text-center">
+      <div id="verbs-container">
+        <div id="showImage"></div>
+        <audio id="showAudio"></audio>
+      </div>
+      <p id="first-verb" class="verbs-answer"></p>
+      <p id="second-verb" class="verbs-answer"></p>
+      <p id="third-verb" class="verbs-answer"></p>
+      <p id="fourth-verb" class="verbs-answer"></p>
+      <small class="counter">
+        <span id="all-right-answer"></span>
+      </small>
+    </div>
         <script src="./verbs.js"></script>
         <script src="./script.js"></script>
     
